Optimized Snow javascript code and fixed scrollbar issue.

--- a/web/snow/styles.css
+++ b/web/snow/styles.css
@@ -9,5 +9,6 @@ html {
 body {
     margin: 0px;
     padding: 0px;
+    overflow: hidden;
 }
 
